--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,8 @@
   </head>
   <body data-bs-theme="light">
     <!-- Sidebar -->
-    <aside class="navbar navbar-vertical navbar-expand-lg ps-2">
+    <aside class="navbar navbar-vertical navbar-small navbar-expand-lg ps-2">
+    <!-- <aside class="navbar navbar-vertical navbar-expand-lg ps-2"> -->
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -438,8 +439,8 @@
                 <span class="nav-link-title"> Setting </span>
               </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle show" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="true">
+            <li class="nav-item">
+              <a class="nav-link active show" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="true">
                 <span class="nav-link-icon active d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/layout-2 -->
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"></path><path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"></path><path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"></path><path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"></path></svg>
                 </span>
